syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "AccountUpdateContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

// Update account name. Account name is not unique now.
message AccountUpdateContract {
    bytes account_name = 1;
    bytes owner_address = 2;
}
